@@ -1,3 +1,8 @@
+2002-03-29  Mark McLoughlin  <mark@skynet.ie>
+
+	* bonobo/bonobo-plug.c: (bonobo_plug_button_event): ungrab the
+	pointer here, so our parents can do grabs.
+
 2002-04-01  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-sync-toolbar.c
